--- a/docs/team/contributors.yaml
+++ b/docs/team/contributors.yaml
@@ -47,7 +47,7 @@
 - name: Jeremy Tuloup
   handle: "@jtpio"
   affiliation: Quantstack
-  team: inactive
+  team: active
   last-check-in: 2022-01
  
 
