--- a/docs/team/contributors.yaml
+++ b/docs/team/contributors.yaml
@@ -43,7 +43,13 @@
   affiliation: Apple
   team: active
   last-check-in: 2022-01
-  
+
+- name: Steve Silvester
+  handle: "@blink1073"
+  affiliation: MongoDB
+  team: active
+  last-check-in: 2022-03
+
 - name: Jeremy Tuloup
   handle: "@jtpio"
   affiliation: Quantstack
