Update Darian's affiliation

--- a/docs/team/contributors.yaml
+++ b/docs/team/contributors.yaml
@@ -28,9 +28,9 @@
 
 - name: Afshin Darian
   handle: "@afshin"
-  affiliation: Two Sigma
+  affiliation: QuantStack
   team: active
-  last-check-in: 2022-01
+  last-check-in: 2022-05
 
 - name: Kevin Goldsmith
   handle: "@kevingoldsmith"
